--- a/css/styles.css
+++ b/css/styles.css
@@ -46,7 +46,7 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 }
 #footer {
   background-color: #444;
-  color: #aaa;
+  color: white;
   font-size: 8pt;
   letter-spacing: 1px;
   padding: 25px;
@@ -98,13 +98,12 @@ nav h1 a {
 
 /* Add a color to all links inside the list */
 #breadcrumb li a {
-    color: #0275d8;
+    color: #024D92;
     text-decoration: none;
 }
 
 /* Add a color on mouse-over */
 #breadcrumb li a:hover {
-    color: #01447e;
     text-decoration: underline;
 }
 /* ====================== Map ====================== */
@@ -118,7 +117,7 @@ nav h1 a {
   /*width: 100%;*
   height: 50px;*/
   padding: 20px;
-  background-color: #3397DB;
+  background-color: #11507D;
   align-items: center;
 }
 .filter-options h2 {
@@ -188,7 +187,7 @@ nav h1 a {
   max-width: 100%;
 }
 #restaurants-list li h2 {
-  color: #f18200;
+  color: #A82800;
   font-family: Arial,sans-serif;
   font-size: 12pt;
   font-weight: 200;
@@ -202,7 +201,7 @@ nav h1 a {
   font-size: 11pt;
 }
 #restaurants-list li a {
-  background-color: orange;
+  background-color: #A82800;
   color: #fff;
   display: block;
   font-size: 11pt;
@@ -264,7 +263,7 @@ p.neighborhood {
   width: 50%;
 }*/
 #restaurant-name {
-  color: #f18200;
+  color: #703A00;
   font-family: Arial,sans-serif;
   font-size: 16pt;
   font-weight: 200;
@@ -354,7 +353,7 @@ div#restaurant-details-body {
   }
 }
 #reviews-container h3 {
-  color: #f58500;
+  color: #703A00;
   font-size: 18pt;
   font-weight: 300;
   letter-spacing: -1px;
@@ -428,7 +427,7 @@ p.review-rating {
   background-color: #FFA500;
   padding: 5px 10px;
   text-transform: uppercase;
-  color: white;
+  color: black;
   display: inline-block;
   border-radius: 5px;
   font-weight: bold;
