Meets Stage 3 requirements

--- a/css/styles.css
+++ b/css/styles.css
@@ -73,40 +73,15 @@ nav h1 a {
   letter-spacing: 10px;
   text-transform: uppercase;
 }
-#navBreadcrumb {
-  text-align: left;
-}
-#breadcrumb {
-    padding: 10px 40px 16px;
-    list-style: none;
-    background-color: #eee;
-    font-size: 17px;
-    margin: 0;
-}
-
-/* Display list items side by side */
-#breadcrumb li {
-    display: inline;
-}
-
-/* Add a slash symbol (/) before/behind each list item */
-#breadcrumb li+li:before {
-    padding: 8px;
-    color: black;
-    content: "/\00a0";
-}
-
-/* Add a color to all links inside the list */
-#breadcrumb li a {
-    color: #024D92;
-    text-decoration: none;
-}
-
-/* Add a color on mouse-over */
-#breadcrumb li a:hover {
-    text-decoration: underline;
-}
 /* ====================== Map ====================== */
+#map-container {
+  height: 40vh;
+}
+@media screen and (min-width: 800px) {
+  #map-container {
+    padding-top: 30px;
+  }
+}
 #map {
   height: 40vh;
   width: 100%;
@@ -148,11 +123,16 @@ nav h1 a {
 }
 
 /* ====================== Restaurant Listing ====================== */
+#restaurant-container  {
+  padding-bottom: 15px;
+  border-bottom: 1px solid #d9d9d9;
+}
+
 #restaurants-list {
   background-color: #f3f3f3;
   list-style: outside none none;
   margin: 0;
-  padding: 30px 0 60px;
+  padding: 30px 0 0;
   width: 100%;
   display: flex;
   flex-wrap: wrap;
@@ -166,6 +146,7 @@ nav h1 a {
   position: relative;
   padding-bottom: 15px;
   border-bottom: solid 1px #aaa;
+  width: 100%;
 }
 @media screen and (min-width: 800px) {
   #restaurants-list li {
@@ -234,201 +215,4 @@ p.neighborhood {
 #no-restaurants {
   padding: 20px 30px;
   margin: 0;
-}
-
-/* ====================== Restaurant Details ====================== */
-/*.inside header {
-  position: fixed;
-  top: 0;
-  width: 100%;
-  z-index: 1000;
-}*/
-.inside #map-container {
-  background: blue none repeat scroll 0 0;
-  height: 40vh;
-  /*height: 87%;
-  position: fixed;
-  right: 0;
-  top: 80px;
-  width: 50%;*/
-}
-.inside #map {
-  background-color: #ccc;
-  height: 100%;
-  width: 100%;
-}
-/*.inside #footer {
-  bottom: 0;
-  position: absolute;
-  width: 50%;
-}*/
-#restaurant-name {
-  color: #703A00;
-  font-family: Arial,sans-serif;
-  font-size: 16pt;
-  font-weight: 200;
-  letter-spacing: 0;
-  margin: 15px 0 30px;
-  text-transform: uppercase;
-  line-height: 1.1;
-}
-@media screen and (min-width: 800px) {
-  #restaurant-name {
-    font-size: 20pt;
-  }
-}
-#restaurant-img {
-  width: auto;
-  max-width: 100%; 
-}
-#restaurant-details {
-  margin-top: 30px;
-}
-@media screen and (min-width: 800px) {
-  #restaurant-img-and-details {
-    display: flex;
-  }
-  #restaurant-div-with-img,
-  #restaurant-details {
-    width: 50%;
-  }
-  #restaurant-img {
-    margin-right: 20px;
-  }
-  #restaurant-details {
-    margin-top: 0;
-    margin-left: 20px;
-  }
-}
-#restaurant-details-inner {
-  background-color: white;
-  border-bottom: solid 1px black;
-}
-@media screen and (min-width: 800px) {
-  #restaurant-details-inner {
-    box-shadow: 10px 10px 5px grey;
-    border-bottom: none;
-  }
-}
-#restaurant-address {
-  font-size: 12pt;
-  margin: 10px 0px;
-}
-#restaurant-cuisine {
-  background-color: #333;
-  font-size: 11pt;
-  letter-spacing: 10px;
-  text-align: center;
-  text-transform: uppercase;
-	padding: 10px;
-  color: white;
-  font-weight: bold;
-  margin: 0;
-}
-@media screen and (min-width: 800px) {
-  #restaurant-cuisine {
-    font-size: 12pt;
-  }
-}
-div#restaurant-details-body {
-  padding: 10px 20px;
-}
-#restaurant-container, 
-#reviews-container {
-  border-bottom: 1px solid #d9d9d9;
-  border-top: 1px solid #fff;
-  padding-top: 40px;
-  padding-bottom: 30px;
-  /*width: 50%;*/
-}
-#reviews-container {
-  padding-top: 30px;
-  padding-left: 40px;
-  padding-right: 40px;
-}
-@media screen and (min-width: 800px) {
-  #restaurant-container {
-    padding-left: 40px;
-    padding-right: 40px;
-  }
-}
-#reviews-container h3 {
-  color: #703A00;
-  font-size: 18pt;
-  font-weight: 300;
-  letter-spacing: -1px;
-  padding-bottom: 1pt;
-}
-@media screen and (min-width: 800px) {
-  #reviews-container h3 {
-    font-size: 24pt;
-  }
-}
-#reviews-list {
-  margin: 0;
-  padding: 0;
-}
-#reviews-list li {
-  background-color: #fff;
-  box-shadow: 10px 10px 5px grey;
-  display: block;
-  list-style-type: none;
-  margin: 0 0 30px;
-  overflow: hidden;
-  position: relative;
-  /*max-width: 65em;*/
-  border-top-left-radius: 25px;
-  border-bottom-right-radius: 25px;
-}
-#reviews-list li div.review-body {
-  padding: 20px;
-}
-
-#reviews-list li p {
-  margin: 0;
-}
-#reviews-list li p.review-rating {
-  margin: 0 0 10px;
-}
-#restaurant-hours {
-  width: 100%;
-  border-spacing: 0;
-  border-collapse: separate;
-}
-#restaurant-hours tr td:first-child {
-  font-weight: bold;
-}
-#restaurant-hours tr td {
-  padding: 5px;
-}
-#restaurant-hours tr:nth-of-type(odd) {
-  background-color: #eee;
-}
-div.review-title {
-  display: flex;
-  justify-content: space-between;
-  background-color: #333333;
-}
-
-#reviews-list li div.review-title p {
-  color: white;
-  margin: 10px;
-}
-
-p.review-author {
-  font-weight: bold;
-}
-
-p.review-date {
-  color: #CCCCCC;
-}
-
-p.review-rating {
-  background-color: #FFA500;
-  padding: 5px 10px;
-  text-transform: uppercase;
-  color: black;
-  display: inline-block;
-  border-radius: 5px;
-  font-weight: bold;
 }
